tests/semantic/invalid/duplicate_declaration/dup_local.src
fn main() {
  int x;
  int x;
}
